--- a/source/_data/gallery.yml
+++ b/source/_data/gallery.yml
@@ -1,8 +1,12 @@
 hat :
   full_link : https://cdn.shopify.com/s/files/1/0275/6675/products/170517_Smile_More_Camo_Hat_WEB_2048x2048.jpg?v=1501009575
   thumb_link : https://cdn.shopify.com/s/files/1/0275/6675/products/170517_Smile_More_Camo_Hat_WEB_2048x2048.jpg?v=1501009575
-  descr : Smile more
+  descr : Smile more 
 
+helmat :
+  full_link : https://i.pinimg.com/736x/9c/dd/05/9cdd05ded0ef3bb2b37206a9bfd15f30--jack-black-motorcycle-helmets.jpg
+  thumb_link : https://i.pinimg.com/736x/9c/dd/05/9cdd05ded0ef3bb2b37206a9bfd15f30--jack-black-motorcycle-helmets.jpg
+  descr : diesel
 helmat :
   full_link : https://i.pinimg.com/736x/9c/dd/05/9cdd05ded0ef3bb2b37206a9bfd15f30--jack-black-motorcycle-helmets.jpg
   thumb_link : https://i.pinimg.com/736x/9c/dd/05/9cdd05ded0ef3bb2b37206a9bfd15f30--jack-black-motorcycle-helmets.jpg
