--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,4 +1,12 @@
-這是link :
+村人B :
       link : https://www.youtube.com/  
       avatar: https://www.youtube.com/yts/img/yt_1200-vfl4C3T0K.png
-      descr: 描述
+      descr: Project  Fururu 的企劃/劇本/演出
+亞莓 :
+      link : https://www.youtube.com/  
+      avatar: https://www.youtube.com/yts/img/yt_1200-vfl4C3T0K.png
+      descr: Project  Fururu 的企劃/美術總監
+昊子 :
+      link : https://www.youtube.com/  
+      avatar: https://www.youtube.com/yts/img/yt_1200-vfl4C3T0K.png
+      descr: Project  Fururu 的程式長
