上傳背景圖

--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -4,9 +4,37 @@
       descr: Project  Fururu 的企劃/劇本/演出
 亞莓 :
       link : https://www.youtube.com/  
-      avatar: https://www.youtube.com/yts/img/yt_1200-vfl4C3T0K.png
+      avatar: /img/Arme.jpg
       descr: Project  Fururu 的企劃/美術總監
 昊子 :
       link : https://www.youtube.com/  
-      avatar: https://www.youtube.com/yts/img/yt_1200-vfl4C3T0K.png
+      avatar:  /img/Haox.jpg
       descr: Project  Fururu 的程式長
+OvvO :
+      link : https://www.youtube.com/  
+      avatar: /img/OWO.JPG
+      descr: Project  Fururu 的程式/吉祥物
+骨頭 :
+      link : https://www.youtube.com/  
+      avatar: /img/骨頭.png
+      descr: Project  Fururu 的美術/碧藍農夫
+尬廣 :
+      link : https://www.youtube.com/  
+      avatar: https://www.youtube.com/yts/img/yt_1200-vfl4C3T0K.png
+      descr: Project  Fururu 的專案管理/程式
+帽帽 :
+      link : https://www.youtube.com/  
+      avatar: https://www.youtube.com/yts/img/yt_1200-vfl4C3T0K.png
+      descr: Project  Fururu 的程式
+去光水      :
+      link : https://www.youtube.com/  
+      avatar: /img/水.jpg
+      descr: Project  Fururu 的程式
+評評 :
+      link : https://www.youtube.com/  
+      avatar: /img/評評.gif
+      descr: Project  Fururu 的程式
+哈哈  :
+      link : https://www.youtube.com/  
+      avatar: /img/哈.jpg
+      descr: Project  Fururu 的程式
