--- a/source/_data/gallery.yml
+++ b/source/_data/gallery.yml
@@ -1,13 +1,9 @@
-hat :
-  full_link : https://cdn.shopify.com/s/files/1/0275/6675/products/170517_Smile_More_Camo_Hat_WEB_2048x2048.jpg?v=1501009575
-  thumb_link : https://cdn.shopify.com/s/files/1/0275/6675/products/170517_Smile_More_Camo_Hat_WEB_2048x2048.jpg?v=1501009575
-  descr : Smile more 
+森林小屋 :
+  full_link : /img/屋內選項.png
+  thumb_link : /img/屋內選項縮圖.PNG
+  descr : 屋內選項
 
 helmat :
   full_link : https://i.pinimg.com/736x/9c/dd/05/9cdd05ded0ef3bb2b37206a9bfd15f30--jack-black-motorcycle-helmets.jpg
   thumb_link : https://i.pinimg.com/736x/9c/dd/05/9cdd05ded0ef3bb2b37206a9bfd15f30--jack-black-motorcycle-helmets.jpg
   descr : diesel
-<<<<<<< HEAD
-#不要取同名的標籤 gallery 會森77
-=======
->>>>>>> ad9de72b8b6ac5a4a097a9ca4e86d0bdb86345a9
